src/Component/Info.css
.Info {
    --c_1: #fff;
    --c_2: #8f1d21;
    --tTime: 800ms;
    position: relative;
}
.infoGroup {
    display: flex;
}
.infLeft {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    width: 25%;

    gap: 10px;

    padding: 20px;

    text-align: center;

    background: var(--c_2);
}

.infLeft *{
    width: 100%;

    padding: 10px;

    border-radius: 10px;

    background: var(--c_1);
    color: var(--c_2);
}
.infLeft h2 {
    font-size: 2.7rem;
}
.infLeft p {
    font-size: 1.1rem;
}






.infRight {
    flex: 2;
    
    border: 2.5px solid var(--c_1);
    border-radius: 0;

    height: 100vh;

    background-size: cover;
    background-attachment: fixed;
    background-position: 15rem;
}









@media screen and (max-width: 900px) {
    .infoGroup {
        display: block;
    }
    .infLeft {
        width: 100%;
    }
    
    .infLeft h2 {
        font-size: 3rem;
    }
    .infLeft p {
        font-size: 1.1rem;
    }
    
    
    
    
    
    
    .infRight {
        border: 0 solid var(--c_1);
    
        height: 400px;
    
        background-attachment: local;
        background-position: 0;
    }
}

